@startuml entities

class Airport {
  __ attributes __
  - id: Long
  - airportName: String
  - city: String
  - country: String
  - longitude: double
  - latitude: double
  - timezone: int
}

class Airline {
  __ attributes __
  - id: Long
  - name: String
  - country: String
  - price: double
  // more properties, like calculator, restriction etc.
}

class Route {
  __ attributes __
  - routeId: Long
  - srcAirportId: Long
  - dstAirportId: Long
  - connections: Array<Connection>
}

class Connection {
  __ attributes __
<<<<<<< HEAD
  - connectionId: int
  - airline: String
  - srcAirport: String
  - dstAirport: String
  - departureDate: Date
  - arrivalDate: Date
=======
  - connectionId: Long
  - airlineId: Long
  - srcAirportId: Long
  - dstAirportId: Long
>>>>>>> 7e004466981416afe071e0209bf859e41c7e3e9d
}

class Flight {
  __ attributes __
  - flightId: Long
  - connection: Connection
  - peopleCapacity: int
  - departureDate: Date
  - arrivalDate: Date
}

class Ticket {
  __ attributes __
  - ticketId: Long
  - flight: Flight
  - passenger: Passenger
  - purchaseDate: Date
  - flightClass: String
  - seatNumber: int
  - maxLuggageWeight: double
  - price: Price
  // maybe more parameters
}

class Passenger {
  __ attributes __
  -firstname: String
  -surname: String
  -dateOfBirth: Date
  -phoneNumber: String
  -email: String
  -idOrPesel: String
}

class Trip {
  __ attributes __
  - id: Long
  - oneWayTrip: boolean
  - tickets: Array<Ticket>
  - departureDate: Date
  - arrivalDate: Date
  - totalPrice: Price
}

Route --.> Airport
Route --.> Airline
Route o-- Connection
Connection --.> Airline
Connection --.> Airport
Flight o-- Connection
Ticket o-- Flight
Ticket *-- Passenger
Trip *-- Ticket

@enduml
